# Virtual-Assistant

./: .all-contributorsrc  .gitignore  .travis.yml  Makefile  Makefile.am  Makefile.in  README.md  analysis.c  analysis.h  artificial_intelligence.c  artificial_intelligence.h  b64.h  compil  config  config.in  configure  configure.ac  decode.c  defines.h  email.c  email2  email2.c  encode.c  functions.c  functions.h  help.txt  init_config.c  init_config.h  main.c  make  pop.c  requests.c  requests.h  response.c  response.h  smtp  smtp.c  ssl.c
.github/: FUNDING.yml
src/: analysis.c  decode.c  email.c  encode.c  functions.c  init_config.c  init_config.h  reminder.c  requests.c  response.c  ssl.c  word_list.c
utils/: b64.h  b64.txt  defines.h  help.txt
